k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: asdemoacr.azurecr.io/api/my-app
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: my-app-config
          mountPath: /App/
      volumes:
      - name: my-app-config
        configMap:
          name: my-app-config
