k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: my-app
